<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_large2" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_line"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:background="@android:color/transparent"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_user_rg"
            android:drawableTint="@color/text_black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:theme="@style/FloatingEditText" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        app:passwordToggleEnabled="false">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@android:color/transparent"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_password_rg"
            android:drawableTint="@color/text_black"
            android:hint="@string/password"
            android:lines="1"
            android:maxLines="1"
            android:padding="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:theme="@style/FloatingEditText" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/or_sign"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:visibility="gone"
        android:background="@drawable/edit_text_line"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/facebook"
            android:layout_marginLeft="20dp"
            android:gravity="left|center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                fontPath="FontAwesome.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_facebook"
                android:textColor="@color/facbook"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/facebook"
                android:textColor="@color/facbook"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/google"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                fontPath="FontAwesome.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_google"
                android:textColor="@color/google_plus"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/google_plus"
                android:textColor="@color/google_plus"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/need_signup"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:text="@string/forgot"
        android:textColor="@color/text_black"
        android:textSize="12sp"
        android:visibility="visible"
        android:textStyle="italic" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">


        <Button
            android:id="@+id/twitter"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_twitter_rg"
            android:visibility="gone" />


        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>

