<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">



            <ImageView
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_large2" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/picture_square"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="invisible" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_anonymou"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_overlay="true"
                    app:civ_border_width="2dp" />


            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_social_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_line"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="right"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_black"
                    android:drawableTint="@color/text_black"
                    android:background="@android:color/transparent"
                    android:drawablePadding="5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:theme="@style/FloatingEditText" />
            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:id="@+id/birthday_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:background="@drawable/edit_text_line">

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="right"
                    android:textColor="@color/text_hint"
                    android:text="@string/birthday"
                    android:padding="5dp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:checkedButton="@+id/male"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_male"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
                <RadioButton
                    android:id="@+id/female"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_female"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


            </RadioGroup>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>
